<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_rooms"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_rooms" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/title_more" />

</menu>
